# Dash-Cv

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: azure-container-webapp.yml  master_yscv.yml
app/: app.py
app/assets/: style.css
app/components/: sidebar.py
app/pages/: assistant.py  chat.py  cv.py  gantt.py  home.py  interests.py  projects.py  skills.py  ys.py
app/utils/: DbData.py
sql/: csv-bulk-upload.sql
